fix: align items vertically in footer

--- a/src/styles/Footer.module.scss
+++ b/src/styles/Footer.module.scss
@@ -10,4 +10,5 @@
   row-gap: 0.2rem;
 
   align-self: flex-end;
+  align-items: center;
 }
